# fox-agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
examples/: chat_basic.py  chat_session.py  rag_eval.jsonl  tool_calling_basic.py  tool_calling_file.py  tool_calling_loop.py  tool_calling_memory.py  tool_calling_planning.py
src/: __main__.py
src/agent/: __init__.py  __main__.py  agent.py  cli.py  config.py
src/core/: config.py  logging.py
src/knowledge/: chunker.py  embeddings.py  json_store.py  loader.py  local_store.py  openai_embedding_provider.py  retriever.py  schemas.py  store.py
src/llm/: chat_provider.py  client.py  deepseek_provider.py  embedding_provider.py  openai_chat_provider.py  openai_embedding_provider.py  openai_provider.py  schemas.py  session.py  session_config.py  simple_embedding_provider.py
src/memory/: json_sotre.py  json_store.py  retriever.py  schemas.py  store.py
src/planning/: planner.py  schemas.py
src/runtime/: session.py  session_config.py
src/tools/: builtins.py  executor.py  policy.py  registry.py  result.py  schemas.py
