[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fox-agent"
version = "0.1.0"
description = "A helpful AI agent framework evolving over time."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = ["openai>=1.0.0", "python-dotenv>=1.0.0"]

[project.scripts]
fox-agent = "src.agent.cli:main"

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
